gccida/g1/build_complex_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_complex_type/src/tree.c:4529:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_complex_type/src/tree.c:4556:22: error: use of undeclared identifier 'unk_6F6114'
v8 = ( const char *)&unk_6F6114; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_complex_type/src/tree.c:4561:22: error: use of undeclared identifier 'unk_6F6128'
v8 = ( const char *)&unk_6F6128; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_complex_type/src/tree.c:4566:22: error: use of undeclared identifier 'unk_6F613E'
v8 = ( const char *)&unk_6F613E; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_complex_type/src/tree.c:4571:22: error: use of undeclared identifier 'unk_6F6150'
v8 = ( const char *)&unk_6F6150; 
                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_complex_type/src/obj/tree.o] Error 1
